--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "redux": "^4.0.0"
+  }
 }
